--- a/style.css
+++ b/style.css
@@ -230,6 +230,19 @@ p, .sottotitolo {
     border-color: #0277bd;
 }
 
+.social-btn.tryhackme {
+    /* Verde Menta chiaro */
+    background-color: #99FFCC; 
+    color: #111; /* Testo quasi nero per un buon contrasto */
+    border: 1px solid #66CC99; /* Aggiunge un bordo sottile per definirlo */
+}
+
+.social-btn.tryhackme:hover {
+    /* Un verde menta leggermente più scuro quando ci passi sopra */
+    background-color: #66CC99;
+    color: white; /* Per farlo spiccare */
+}
+
 .social-btn.instagram {
     background: linear-gradient(135deg, #ffb74d, #fb8c00, #f4511e);
     border: none;
